--- a/_layouts/2016_home.html
+++ b/_layouts/2016_home.html
@@ -12,10 +12,10 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-heading">Teste<br></div>
-                <div class="intro-lead-in">Date</div>
-                <div class="intro-lead-in">Location</div>
-                <a href="#intro" class="page-scroll btn btn-xl">Tell Me More</a>
+                <div class="intro-heading">II Semana da Matemática<br></div>
+                <div class="intro-lead-in">De 16 a 19 de Outubro</div>
+                <div class="intro-lead-in">IFSP - Itapetininga/SP</div>
+                <a href="#intro" class="page-scroll btn btn-xl">Saiba mais</a>
             </div>
         </div>
     </header>
