--- a/_includes/2017_data/header-home.html
+++ b/_includes/2017_data/header-home.html
@@ -17,6 +17,10 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li class="hidden">
                         <a href="/"></a>
+		    </li>
+		    <li>
+		    </button>
+                    <a class="navbar-brand page-scroll" href="/"><img src="../css/2017_style/img/logo_IFSP.png" style="margin-top:-15px" width="150px" alt="icon-about"></a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#speakers">Palestras</a>
