--- a/_includes/2017_data/header.html
+++ b/_includes/2017_data/header.html
@@ -10,7 +10,11 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand page-scroll" href="/"><img src="../css/2017_style/img/sematif4.png" style="margin-top:-15px" width="140px" alt="icon-about"></a>
+		</button>
+                <a class="navbar-brand page-scroll" href="/"><img src="../css/2017_style/img/logo_IFSP.png" style="margin-top:-15px" width="150px" height="150px" alt="icon-about"></a>
             </div>
+
+
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
