--- a/_includes/2017_data/header-home.html
+++ b/_includes/2017_data/header-home.html
@@ -11,7 +11,7 @@
                 </button>
                 <a class="navbar-brand page-scroll" href="/"><img src="../css/2017_style/img/sematif4.png" style="margin-top:-15px" width="150px" alt="icon-about"></a>
 		</button>
-                <a class="navbar-brand page-scroll" href="www.ifsp.edu.br"><img src="../css/2017_style/img/logo_IFSP.png" style="margin-top: -35px" width="170px" height="100px" alt="icon-about"></a>
+                <a class="navbar-brand page-scroll" href="https://www.ifsp.edu.br"><img src="../css/2017_style/img/logo_IFSP.png" style="margin-top: -35px" width="180px" height="100px" alt="icon-about"></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
