atualizacao das palestras e minicursos

--- a/_includes/2017_data/header-home.html
+++ b/_includes/2017_data/header-home.html
@@ -24,6 +24,9 @@
                         <a class="page-scroll" href="#speakers">Palestras</a>
                     </li>
                     <li>
+		    <a class="page-scroll" href="#minicursos">Minicursos</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#about">Informações gerais</a>
                     </li>
                     <li>
