--- a/_includes/2017_data/header.html
+++ b/_includes/2017_data/header.html
@@ -22,6 +22,9 @@
                     </li>
                     <li>
                         <a class="page-scroll" href="../#speakers">Palestras</a>
+		    </li>
+                    <li>
+                        <a class="page-scroll" href="../#minicursos">Minicursos</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="../#about">Informações gerais</a>
