--- a/_layouts/2017_home.html
+++ b/_layouts/2017_home.html
@@ -22,11 +22,13 @@
 
     {% include 2017_data/intro.html %}
     {% include 2017_data/speakers.html %}
+    {% include 2017_data/minicursos.html %}
     {% include 2017_data/about.html %}
     {% include 2017_data/sponsors.html %}
     {% include 2016_data/contact.html %}
     {% include 2016_data/footer.html %}
     {% include 2017_data/speakers_info.html %}
+    {% include 2017_data/minicursos_info.html %}
     {% include 2016_data/js.html %}
 
     </body>
