--- a/_includes/2017_data/sponsors.html
+++ b/_includes/2017_data/sponsors.html
@@ -10,17 +10,14 @@
             <div class="row">
                 <div class="col-md-4 col-sm-6">
                     <a href="#" class="portfolio-link" data-toggle="modal">
-                        <img src="../css/2017_style/img/logos/TBD.jpg" class="img-responsive img-centered" alt="">
+                        <img src="../css/2017_style/img/logos/franciosi.png" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
                 <div class="col-md-4 col-sm-6">
                     <a href="#" class="portfolio-link" data-toggle="modal">
-                        <img src="../css/2017_style/img/logos/TBD.jpg" class="img-responsive img-centered" alt="">
+                        <img src="../css/2017_style/img/logos/alberto.jpg" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
-                <div class="col-md-4 col-sm-6">
-                    <a href="#" class="portfolio-link" data-toggle="modal">
-                        <img src="../css/2017_style/img/logos/TBD.jpg" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
             </div>
