--- a/_includes/2017_data/sponsors.html
+++ b/_includes/2017_data/sponsors.html
@@ -8,13 +8,13 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4 col-sm-6">
-                    <a href="#" class="portfolio-link" data-toggle="modal">
+                <div class="col-md-6 col-sm-1">
+                    <a href="http://www.franciosi.com.br" class="portfolio-link" data-toggle="modal">
                         <img src="../css/2017_style/img/logos/franciosi.png" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
-                <div class="col-md-4 col-sm-6">
-                    <a href="#" class="portfolio-link" data-toggle="modal">
+                <div class="col-md-6 col-sm-1">
+                    <a href="https://b-m.facebook.com/emporioalberto" class="portfolio-link" data-toggle="modal">
                         <img src="../css/2017_style/img/logos/alberto.jpg" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
