--- a/_layouts/2017_home.html
+++ b/_layouts/2017_home.html
@@ -11,19 +11,28 @@
     <!-- Header -->
     <header>
         <div class="container">
-            <div class="intro-text">
-
-
+				<div class="row">
+				</br>
+				</br>
+				</br>
+				</br>
+				</br>
+				</br>
+                		<div class="col-lg-12 text-center">
+				<!-- <div class="col-md-6 col-sm-1"> -->
+		    		<img src="../css/2017_style/img/sematif5.png">
+       				
+				<!-- <div class="container">
+				<div class="intro-text">
 				<div class="row">
                 		<div class="col-lg-12 text-center">
-		    		<img src="../css/2017_style/img/sematif5.png">
+				<div class="col-md-6 col-sm-1">
+		    		<img src="../css/2017_style/img/sematif5.png"> -->
 
-
-
-                <div class="intro-heading"> <font color="#D1EA2D"> 2ª Semana da Matemática </font><br></div>
-                <div class="intro-heading"> <font color="#D1EA2D"> IFSP - Itapetininga/SP</font></div>
-                <div class="intro-heading"> <font size="20px" color="#D1EA2D"> De 16 a 19 de Outubro de 2018 </font> </div>
-                <a href="#intro" class="page-scroll btn btn-xl">Saiba mais</a>
+                		<div class="intro-heading"> <font size="20px" color="#D1EA2D"> 2ª Semana da Matemática </font><br></div>
+                		<div class="intro-heading"> <font size="20px" color="#D1EA2D"> IFSP - Itapetininga/SP</font></div>
+                		<div class="intro-heading"> <font size="20px" color="#D1EA2D"> De 16 a 19 de Outubro de 2018 </font> </div>
+                		<a href="#intro" class="page-scroll btn btn-xl">Saiba mais</a>
 
 <!--intro-lead-in -->
 
