--- a/_includes/2016_data/contact.html
+++ b/_includes/2016_data/contact.html
@@ -2,38 +2,38 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Contact Us</h2>
-                <h3 class="section-subheading text-muted">We will do our best to answer your request as soon as possible. You may send us your request via <a href="https://www.facebook.com/">Facebook Message</a></h3>
+                <h2 class="section-heading">Contato</h2>
+                <h3 class="section-subheading text-muted">Você pode entrar em contato conosco via email.</h3>
             </div>
         </div>
         <div class="row">
             <div class="col-lg-12">
-                <form name="sentMessage" id="contactForm" action="https://formspree.io/hello.world@gmail.com" method="POST" novalidate>
+                <form name="sentMessage" id="contactForm" action="https://formspree.io/rafamassambone@gmail.com" method="POST" novalidate>
                     <div class="row">
                         <div class="col-md-6">
                             <div class="control-group form-group">
-                                <input type="text" class="form-control" name="name" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name."WW>
+                                <input type="text" class="form-control" name="name" placeholder="Seu nome *" id="name" required data-validation-required-message="Por favor, digite o seu nome."WW>
                                 <p class="help-block text-danger"></p>
                             </div>
                             <div class="control-group form-group">
-                                <input type="email" class="form-control" name="_replyto" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
+                                <input type="email" class="form-control" name="_replyto" placeholder="Seu Email *" id="email" required data-validation-required-message="Por favor, digite o seu endereço de email.">
                                 <p class="help-block text-danger"></p>
                             </div>
                             <div class="control-group form-group">
-                                <input type="tel" class="form-control" name="phone" placeholder="Your Phone" id="phone" required data-validation-required-message="Please enter your phone number (optional).">
+                                <input type="tel" class="form-control" name="phone" placeholder="Seu telefone" id="phone" required data-validation-required-message="Por favor, digite o número de seu telefone (opcional).">
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="control-group form-group">
-                                <textarea class="form-control" name="message" placeholder="Your Message *" id="message" required data-validation-required-message="Please enter a message."></textarea>
+                                <textarea class="form-control" name="message" placeholder="Sua mensagem *" id="message" required data-validation-required-message="Por favor, digite a sua mensagem."></textarea>
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
                         <div class="clearfix"></div>
                         <div class="col-lg-12 text-center">
                             <div id="success"></div>
-                            <button type="submit" value="Send" class="btn btn-xl">Send Message</button>
+                            <button type="submit" value="Send" class="btn btn-xl">Enviar mensagem</button>
                         </div>
                     </div>
                 </form>
