--- a/_includes/2017_data/intro.html
+++ b/_includes/2017_data/intro.html
@@ -43,7 +43,7 @@
             		<div class="row">
                 		<div class="col-lg-12 text-center">
            				<p> <font size="5px"> Faça a sua inscrição através da página do Worktech 2018</font> </p>
-                 <center><a href="https://itp.ifsp.edu.br/worktech/" class="page-scroll btn btn-xl">Inscrições abertas</a></center>
+                 <center><a href="https://itp.ifsp.edu.br/worktech/" class="page-scroll btn btn-xl">Em breve!</a></center>
             </div>
         </div>
 
