atualizacao do home

--- a/_layouts/2017_home.html
+++ b/_layouts/2017_home.html
@@ -11,24 +11,11 @@
     <!-- Header -->
     <header>
         <div class="container">
-				<div class="row">
-				</br>
-				</br>
-				</br>
-				</br>
-				</br>
-				</br>
-                		<div class="col-lg-12 text-center">
-				<!-- <div class="col-md-6 col-sm-1"> -->
-		    		<img src="../css/2017_style/img/sematif4.png">
-<!-- #D1EA2D -->
-                		<div class="intro-heading"> <font size="60px" color="#BAF9DC"> 2ª Semana da Matemática </font><br></div>
-                		<div class="intro-heading"> <font size="60px" color="#BAF9DC"> IFSP - Itapetininga/SP</font></div>
-                		<div class="intro-heading"> <font size="60px" color="#BAF9DC"> De 16 a 19 de Outubro de 2018 </font> </div>
-                		<a href="#intro" class="page-scroll btn btn-xl">Saiba mais</a>
-
-<!--intro-lead-in -->
-
+            <div class="intro-text">
+                <div class="intro-heading">2ª SEMANA DA MATEMÁTICA DO IFSP - ITAPETININGA<br></div>
+                <div class="intro-lead-in">DE 16 A 19 DE OUTUBRO DE 2018</div>
+                <div class="intro-lead-in">IFSP - ITAPETININGA</div>
+                <a href="#intro" class="page-scroll btn btn-xl">SAIBA MAIS</a>
             </div>
         </div>
     </header>
@@ -46,3 +33,4 @@
 
     </body>
 </html>
+
