atualizacao do home

--- a/_includes/2017_data/intro.html
+++ b/_includes/2017_data/intro.html
@@ -11,6 +11,8 @@
 			<h2 class="section-heading">Campus Itapetininga</h2>
                 </div>
             </div>
+
+ <div class="row container">
             
 <p> <font size="5px"> <p align="justify"> Este será o segundo evento de caráter científico e educacional diretamente relacionado com o curso de Licenciatura em Matemática do Instituto Federal de Educação, Ciência e Tecnologia de São Paulo, campus Itapetininga (MAT-IFSP-ITP). O evento é basicamente organizado pelo corpo docente e discente do curso e é parte integrante do Worktech-IFSP. Com o objetivo de aproximar profissionais da matemática e áreas afins de toda a região com o corpo docente e discente do MAT-IFSP-ITP, nesta edição do evento contaremos com palestras nas áreas de Matemática Aplicada e Computacional e Educação Matemática, além de três minicursos e uma gincana educativa. Será uma ótima oportunidade de aprimorar as habilidades e fazer novos contatos! </font> </p>
 <br />
