atualizacao do home

--- a/_includes/2017_data/sponsors.html
+++ b/_includes/2017_data/sponsors.html
@@ -4,20 +4,23 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Patrocinadores</h2>
+                    <h2 class="section-heading">Apoio</h2>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-4 col-sm-6">
                     <a href="http://www.franciosi.com.br" class="portfolio-link" data-toggle="modal">
-                        <img src="../css/2017_style/img/logos/TBD.jpg" class="img-responsive img-centered" alt="">
+                        <img src="../css/2017_style/img/logos/franciosi.jpg" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
                 <div class="col-md-4 col-sm-6">
                     <a href="https://b-m.facebook.com/emporioalberto" class="portfolio-link" data-toggle="modal">
-                        <img src="../css/2017_style/img/logos/TBD.jpg" class="img-responsive img-centered" alt="">
+                        <img src="../css/2017_style/img/logos/alberto5.jpg" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
+		<div class="col-md-4 col-sm-6">
+                    <a href="#" class="portfolio-link" data-toggle="modal">
+                        <img src="../css/2017_style/img/logos/Marca_IFSP_2015-04.jpg" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
             </div>
