--- a/_includes/2017_data/intro.html
+++ b/_includes/2017_data/intro.html
@@ -1,15 +1,24 @@
+
 <!-- Services Section -->
     <section id="intro">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Title</h2>
+		    <img src="../css/2017_style/img/sematif5.png"/>
+			<br />
+			<br />
+			<br />
+			<h2 class="section-heading">A 2ª Semana da Matemática do IFSP</h2>
+			<h2 class="section-heading">Campus Itapetininga</h2>
                 </div>
             </div>
-            <div class="row container">
-                <p>Topic; <a href="/2016">Link to 2016</a> 
-                </p>
 
+ <div class="row container">
+            
+<p> <font size="5px"> <p align="justify"> Este será o segundo evento de caráter científico e educacional diretamente relacionado com o curso de Licenciatura em Matemática do Instituto Federal de Educação, Ciência e Tecnologia de São Paulo, campus Itapetininga (MAT-IFSP-ITP). O evento é basicamente organizado pelo corpo docente e discente do curso e é parte integrante do Worktech-IFSP. Com o objetivo de aproximar profissionais da matemática e áreas afins de toda a região com o corpo docente e discente do MAT-IFSP-ITP, nesta edição do evento contaremos com palestras nas áreas de Matemática Aplicada e Computacional e Educação Matemática, além de três minicursos e uma gincana educativa. Será uma ótima oportunidade de aprimorar as habilidades e fazer novos contatos! </font> </p>
+<br />
+<!--			<br />
+			<br />
                 <style>
                 .video {
                 position:relative;
@@ -30,8 +39,28 @@
                 </style>
 
                 <div class="video"><iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Ffacebook%2Fvideos%2F10153231379946729%2F&width=500&show_text=false&appId=269289086810957&height=280" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe></div><br>
+-->
+			<br />
+			<br />
 
-                 <center><a href="#" class="page-scroll btn btn-xl">Registration Closed</a></center>
+			<div class="container">
+            		<div class="row">
+                		<div class="col-lg-12 text-center">
+           				<p> <font size="5px"> Faça a sua inscrição através da página do Worktech 2018</font> </p>
+                 <center><a href="https://itp.ifsp.edu.br/worktech/" class="page-scroll btn btn-xl">Em breve!</a></center>
             </div>
         </div>
+
+<br />
+			<br />
+		<div class="container">
+            		<div class="row">
+                		<div class="col-lg-12 text-center">
+           <p> <font size="5px"> Visitar a página do Worktech 2017</font> </p>
+
+            <center><a href="https://itp.ifsp.edu.br/worktech/" class="page-scroll btn btn-xl">Visitar Worktech 2017</a></center>
+        </div>
+
+
+
     </section>
