--- a/_includes/2017_data/sponsors.html
+++ b/_includes/2017_data/sponsors.html
@@ -20,7 +20,7 @@
                 </div>
 		<div class="col-md-4 col-sm-6">
                     <a href="#" class="portfolio-link" data-toggle="modal">
-                        <img src="../css/2017_style/img/logos/Marca_IFSP_2015-04" class="img-responsive img-centered" alt="">
+                        <img src="../css/2017_style/img/logos/Marca_IFSP_2015-04.jpg" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
             </div>
