--- a/_includes/2017_data/logo.html
+++ b/_includes/2017_data/logo.html
@@ -1,1 +1,1 @@
-<a href="/logo"><img class="web-logo" src="/css/2016_style/img/sematif4.png"></a>
+<a href="/logo"><img class="web-logo" src="/css/2016_style/img/sematif4.svg"></a>
