--- a/_includes/2017_data/intro.html
+++ b/_includes/2017_data/intro.html
@@ -47,7 +47,7 @@
             		<div class="row">
                 		<div class="col-lg-12 text-center">
            				<p> <font size="5px"> Faça a sua inscrição através da página do Worktech 2018</font> </p>
-                 <center><a href="https://itp.ifsp.edu.br/worktech/inscricoes.html" class="page-scroll btn btn-xl">Em breve!</a></center>
+                 <center><a href="https://itp.ifsp.edu.br/worktech/#inscricoes" class="page-scroll btn btn-xl">Em breve!</a></center>
             </div>
         </div>
 
@@ -58,7 +58,7 @@
                 		<div class="col-lg-12 text-center">
            <p> <font size="5px"> Visitar a página do Worktech 2017</font> </p>
 
-            <center><a href="https://itp.ifsp.edu.br/worktech/" class="page-scroll btn btn-xl">Visitar Worktech 2017</a></center>
+            <center><a href="https://itp.ifsp.edu.br/worktech/anteriores.html" class="page-scroll btn btn-xl">Visitar Worktech 2017</a></center>
         </div>
 
 
