atualizacao informacoes do Worktech

--- a/_includes/2017_data/intro.html
+++ b/_includes/2017_data/intro.html
@@ -46,8 +46,8 @@
 			<div class="container">
             		<div class="row">
                 		<div class="col-lg-12 text-center">
-           				<p> <font size="5px"> Faça a sua inscrição através da página do Worktech 2018</font> </p>
-                 <center><a href="https://itp.ifsp.edu.br/worktech/#inscricoes" class="page-scroll btn btn-xl">Em breve!</a></center>
+           				<p> <font size="5px"> Faça a sua inscrição através da página do VIII Worktech</font> </p>
+                 <center><a href="https://worktech.itp.ifsp.edu.br/inscricoes.html" class="page-scroll btn btn-xl">Inscrições abertas!</a></center>
             </div>
         </div>
 
@@ -56,9 +56,9 @@
 		<div class="container">
             		<div class="row">
                 		<div class="col-lg-12 text-center">
-           <p> <font size="5px"> Visitar a página do Worktech 2017</font> </p>
+           <p> <font size="5px"> Visitar a página do VIII Worktech</font> </p>
 
-            <center><a href="https://itp.ifsp.edu.br/worktech/anteriores.html" class="page-scroll btn btn-xl">Visitar Worktech 2017</a></center>
+            <center><a href="https://worktech.itp.ifsp.edu.br/index.html" class="page-scroll btn btn-xl">VIII Worktech</a></center>
         </div>
 
 
